syntax = "proto3";

option java_multiple_files = true;

option java_package = "net.devibot.grpc.mainframe";

import "entities.proto";
import "messages.proto";

service MainframeService {

    rpc connectionAttempt (ConnectToMainframeRequest) returns (ConnectToMainframeResponse);

    rpc getDeviGuild (DeviGuildRequest) returns (DeviGuild);

    rpc getTranslations (TranslationRequest) returns (TranslationResponse);

    rpc saveDeviGuild (DeviGuildSettingsSaveRequest) returns (DefaultSuccessResponse);

    rpc getUser(UserRequest) returns (User);

    rpc saveUser (UserDataSaveRequest) returns (DefaultSuccessResponse);
}

